--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "mocha": "~1.14.0",
     "happen": "~0.1.3",
     "karma": "~0.10.4",
-    "karma-mocha": "~0.1.0"
+    "karma-mocha": "~0.1.0",
+    "karma-coverage": "~0.1.3"
   },
   "main": "dist/leaflet-src.js",
   "scripts": {
